# choice

./: .gitignore  api.py  logging_conf.py  main.py  pyproject.toml  scheduler.py
config/: config.py
database/: __init__.py  get_mongodb.py
dress/: dress_user_choice.py  load_dresses.py  update_dresses.py
dress/routers_dresses/: router_dresses.py  schemas_dresses.py
dress/templates/: choice.html  dresschoice.html  dresschoicechoice.html  dresses_result.html  process.html
dress/templates/static/: style_dress.css
service/: image_actions.py  train.py
service/tests/: test_service.py
users/db_users/: db_actions_users.py  hashing.py  models_users.py
users/routers/: router_users.py  schemas_users.py
users/routers_users/: router_users.py  schemas_users.py
