[tool.poetry]
name = "choice"
version = "0.1.0"
description = ""
authors = ["TekaLishoo <teka.lishoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
sqlalchemy = "1.4.22"
psycopg2-binary = "^2.9.4"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
